--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
             echo "$GHCR_TOKEN" | docker login ghcr.io -u "$GHCR_USERNAME" --password-stdin
             docker push ghcr.io/dashbrains/<< parameters.container_base >>/ruby:<< parameters.ruby_version >>
 workflows:
-  publish:
+  build_and_publish:
     jobs:
       - build:
           matrix:
@@ -40,6 +40,8 @@ workflows:
               ruby_version: ['3.2.2', '3.1.4', '3.0.6']
               container_base: ['ubi9', 'ubi8']
       - publish:
+          requires:
+            - build
           matrix:
             parameters:
               ruby_version: ['3.2.2', '3.1.4', '3.0.6']
