--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,11 @@ jobs:
       - run:
           name: Build docker image
           command: |
-            docker build --build-arg IMAGE=<< parameters.container_base >> --build-arg RUBY_BERSION=<< parameters.ruby_version >> -t ghcr.io/dashbrains/<< parameters.container_base >>/ruby:<< parameters.ruby_version >> .
+            docker buildx build \
+              --platform linux/amd64,linux/arm64 \
+              --build-arg IMAGE=<< parameters.container_base >> \
+              --build-arg RUBY_BERSION=<< parameters.ruby_version >> \
+              -t ghcr.io/dashbrains/<< parameters.container_base >>/ruby:<< parameters.ruby_version >> .
       - run:
           name: Publish to Github Container Registry
           command: |
