--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,11 +27,13 @@ jobs:
               --build-arg IMAGE=<< parameters.container_base >> \
               --build-arg RUBY_BERSION=<< parameters.ruby_version >> \
               -t ghcr.io/dashbrains/<< parameters.container_base >>/ruby:<< parameters.ruby_version >> .
-      - run:
-          name: Publish to Github Container Registry
-          command: |
             echo "$GHCR_TOKEN" | docker login ghcr.io -u "$GHCR_USERNAME" --password-stdin
             docker push ghcr.io/dashbrains/<< parameters.container_base >>/ruby:<< parameters.ruby_version >>       
+      #- run:
+      #    name: Publish to Github Container Registry
+      #    command: |
+      #      echo "$GHCR_TOKEN" | docker login ghcr.io -u "$GHCR_USERNAME" --password-stdin
+      #      docker push ghcr.io/dashbrains/<< parameters.container_base >>/ruby:<< parameters.ruby_version >>       
 
 workflows:
   build_and_publish:
