--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,14 +26,13 @@ jobs:
               --platform linux/amd64 \
               --build-arg IMAGE=<< parameters.container_base >> \
               --build-arg RUBY_BERSION=<< parameters.ruby_version >> \
-              -t ghcr.io/dashbrains/<< parameters.container_base >>/ruby:<< parameters.ruby_version >> .
+              --tag app .
+      - run:
+          name: Publish to Github Container Registry
+          command: |
             echo "$GHCR_TOKEN" | docker login ghcr.io -u "$GHCR_USERNAME" --password-stdin
+            docker tag app ghcr.io/dashbrains/<< parameters.container_base >>/ruby:<< parameters.ruby_version >>  
             docker push ghcr.io/dashbrains/<< parameters.container_base >>/ruby:<< parameters.ruby_version >>       
-      #- run:
-      #    name: Publish to Github Container Registry
-      #    command: |
-      #      echo "$GHCR_TOKEN" | docker login ghcr.io -u "$GHCR_USERNAME" --password-stdin
-      #      docker push ghcr.io/dashbrains/<< parameters.container_base >>/ruby:<< parameters.ruby_version >>       
 
 workflows:
   build_and_publish:
